Added greeting command

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
             "name": "Alejandro Celaya",
             "email": "alejandro@alejandrocelaya.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "Acelaya\\SlimCli\\": "src"
+        }
+    }
 }
